<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner"
        android:backgroundTint="@color/white"
        android:background="@color/black"
        android:textColor="@color/black"
        android:layout_below="@+id/image_from_camera"
        android:layout_width="0dp"
        android:layout_height="54dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="36dp"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/image_from_camera"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="36dp">
    </Spinner>

    <EditText
        android:id="@+id/comment"
        android:textColor="@color/black"
        android:layout_width="354dp"
        android:layout_height="140dp"
        android:inputType="textMultiLine"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/edittext"
        android:ems="10"
        android:hint="@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnVideo"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:targetApi="cupcake"
        app:layout_constraintHorizontal_bias="1.0" />
    <!-- <ImageView
         android:id="@+id/image_from_camera"
         android:layout_below="@+id/comment"
         android:contentDescription="@string/imageview"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_account_circle_black_24dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
     ToDo Change place holder for image view-->
    <ImageView
        android:id="@+id/image_from_camera"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/placeholder"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteY="6dp"
        tools:layout_editor_absoluteX="117dp" />

    <Button
        android:id="@+id/btnCamera"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:background="@drawable/rectangular_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintVertical_bias="0.653"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/comment" />
    <!--ToDo Add camera logo to the camera button-->

    <Button
        android:id="@+id/btnVideo"
        android:text="@string/video"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:background="@drawable/rectangular_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <!--ToDo Add video logo to the video button-->

    <Button
        android:id="@+id/btnPost"
        android:text="@string/post"
        android:background="@drawable/rectangular_button"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginStart="29dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="29dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
